changed some basic structure

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,11 +12,5 @@
 </div>
 
 <div class="sidebar well">
-	<h1>Quick Links</h1>
-	<ul>
-	  <li><a href="https://github.com/Open-Data-Science-at-SIO/BUG-Resources">BUG Resources</a></li>
-	  <li><a href="https://github.com/Open-Data-Science-at-SIO/R-Users-Presentations">R Users Resources</a></li>
-	  <li><a href="#">Three</a></li>
-	  <li><a href="#">Four</a></li>
-	</ul>
+	These are some of our favorite <a href="/links.html">links</a>.
 </div>
