--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,8 +35,7 @@
                     <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">Links</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/mission.html">Mission Statement / Code of Conduct</a></li>                    
                     <li class="active"><a href="{{ site.baseurl }}/archive.html">News Archive</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/resources.html">Guide to Resources</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/links.html">Outside Links</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/resources.html">Events/Workshops/Resources</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/about.html">About</a></li>
                     {% comment %}
                     <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
