Added in author attribution for posts. Tweaked some of the colors around. Slightly more informative sidebar panel. Updated readme with info on author database.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,5 +12,7 @@
 </div>
 
 <div class="sidebar well">
-	These are some of our favorite <a href="/links.html">links</a>.
+    <h1>New Here?</h1>
+    <p>Check out our <a href="{{ site.baseurl }}/resources.html">resources page</a> for an overview of our repositories and guides.</p> 
+	<p>You may also be interested in our curated collection of external <a href="{{ site.baseurl }}/links.html">links</a> to tips/walkthroughs/online-courses.</p>
 </div>
