--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,16 +3,30 @@
 </div>
 
 <div class="sidebar well">
-    <h1>Recent News</h1>
-    <ul>
-        {% for post in site.posts limit:5 %}
-          <li><a href="{{ site.baseurl}}{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-    </ul>
+    <h1>New Here?</h1>
+    <p>Check out our <a href="{{ site.baseurl }}/resources.html">resources page</a> for an overview of our repositories and guides.</p> 
+	<p>You may also be interested in these <a href="{{ site.baseurl }}/links.html">links</a> to other tips/walkthroughs/courses.</p>
+</div>
+
+<div class="well">
+	<h1>Upcoming Events</h1>
+	{% assign current_date = site.time | date: "%Y%m%d" %}
+	{% for event in site.events limit:3 %}
+		{% assign event_date = event.start | date: "%Y%m%d" %}
+    	{% if event_date >= current_date %}
+    		<p><a href="{{ event.url }}">{{ event.title }}</a><br />
+			{{ event.start | date: "%-d %b %Y, %I:%M %P %Z" }}<br />
+			{{ event.location }}
+			</p>
+     	{% endif %}
+    {% endfor %}
 </div>
 
 <div class="sidebar well">
-    <h1>New Here?</h1>
-    <p>Check out our <a href="{{ site.baseurl }}/resources.html">resources page</a> for an overview of our repositories and guides.</p> 
-	<p>You may also be interested in our curated collection of external <a href="{{ site.baseurl }}/links.html">links</a> to tips/walkthroughs/online-courses.</p>
+    <h1>Stay Informed!</h1>
+    Subscribe to our listserves for the latest news:
+    <ul>
+    <li><a href="https://siomail.ucsd.edu/mailman/listinfo/bioinf">SIO Bioinformatics Users Group</a></li>
+    <li><a href="https://siomail.ucsd.edu/mailman/listinfo/r-users">SIO R Users Group</a></li>
+    </ul>
 </div>
