updated resources page (and CSS accordingly) fixed event date for R users group tweaked layout of header and sidebar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
                     <li class="active"><a href="{{ site.baseurl }}/mission.html">Mission Statement / Code of Conduct</a></li>                    
                     <li class="active"><a href="{{ site.baseurl }}/archive.html">News Archive</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/events_list.html">List of Events</a></li>                    
-                    <li class="active"><a href="{{ site.baseurl }}/resources.html">Resources</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/resources.html">Resource Guide</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/about.html">About</a></li>
                     {% comment %}
                     <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
