--- a/css/theme.css
+++ b/css/theme.css
@@ -14,6 +14,24 @@ body {
 .footer a {
     color: #ee4444;
 }
+h1 {
+	color: #ee4444;
+	font-size: 1.3em;
+}
+
+table {
+	border-collapse: separate; 
+	border-spacing: 8px;
+}
+
+.fillcell {
+	vertical-align: top;
+	padding: 19px;
+    background-clip: padding-box;
+    border-radius: 5px;
+    background-color: #F5F5F5;
+    border: 1px solid #E3E3E3;
+}
 
 .sidebar h1 {
     color: #ee4444;
