updated logo tweaked sidebar formatting and main page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,8 +18,8 @@
 
 <div class="sidebar well">
     <h1>New Here?</h1>
-    <p>Check out our <a href="{{ site.baseurl }}/resources.html">resources page</a> for an overview of our repositories and guides.</p> 
-	<p>You may also be interested in these <a href="{{ site.baseurl }}/links.html">links</a> to other tips/walkthroughs/courses.</p>
+    <p>Check out our <a href="{{ site.baseurl }}/resources.html"><strong>resources page</strong></a> for an overview of our repositories and guides.</p> 
+	<p>You may also be interested in these <a href="{{ site.baseurl }}/links.html"><strong>links</strong></a> to other tips/walkthroughs/courses.</p>
 </div>
 
 <div class="sidebar well">
