--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
         <div class="col-md-9">
           <div class="article">
             <div class="well">
-                <h1><a href="{{ site.baseurl}}{{ page.url }}">{{ page.date | date: "%b %-d, %Y" }} - {{ page.title }}</a></h1>
+                <h1><a href="{{ site.baseurl}}{{ page.url }}">{{ page.date | date: "%Y %b %-d" }} - {{ page.title }}</a></h1>
                 <h2>posted by: <a href="mailto:?to={{author.email}}">{{author.display_name}}</a></h2>
             {% if site.comments and page.comments %}
                 {% if site.disqus != '' %}
